When qualifying Clang types with a module, make sure we choose a visible module.

Clang types need special treatment because multiple Clang modules can
contain the same type declarations from a textually included header, but
not all of these modules may be visible.

This fixes

https://bugs.swift.org/browse/SR-13032